# cv-dashboard

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dashboard.py  main.py  pyproject.toml  requirements.txt  setup.cfg  temp_notebook.ipynb
k2_oai/: __init__.py  experimental_metrics.py  metrics.py  obstacle_detection.py  pipelines.py
k2_oai/dashboard/: __init__.py  app.py  pages.py  utils.py
k2_oai/dashboard/components/: __init__.py  buttons.py  login.py  sidebar.py
k2_oai/dashboard/pages/: __init__.py  _metadata_explorer.py  _obstacle_annotator.py  _obstacle_detection.py  _obstacle_labeller.py  _welcome.py
k2_oai/dashboard/utils/: __init__.py  _common.py  _data_loader.py  _io.py
k2_oai/dashboard_pages/: obstacle_detection.py
k2_oai/data/: __init__.py  create.py  load.py
k2_oai/dropbox/: __init__.py  _io.py  hard_disk.py
k2_oai/image_segmentation/: __init__.py
k2_oai/image_segmentation/obstacle_detection/: filtering.py  labelling.py  thresholding.py
k2_oai/io/: data_loader.py  dropbox.py  dropbox_paths.py  hard_disk.py
k2_oai/metrics/: __init__.py  _surface_error.py
k2_oai/utils/: __init__.py  _args_checker.py  _draw_boundaries.py  _image_manipulation.py  _linalg.py  _parsers.py  dropbox_io_utils.py  hard_disk_utils.py  st_utils.py
