[tool.poetry]
name = "k2_oai"
version = "0.1.0"
description = ""
authors = ["OccupyAI"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python-headless = "==4.5.5.64"
streamlit = "==1.9.2"
pandas = "^1.4.2"
numpy = "^1.22.4"
python-dotenv = "^0.20.0"
python-multipart = "^0.0.5"
watchdog = "^2.1.9"
dropbox = "^11.32.0"
seaborn = {version = "^0.11.2", optional = true}
fastapi = {version = "^0.78.0", optional = true}
geopandas = {version = "^0.11.0", optional = true}
osmnx = {version = "^1.2.1", optional = true}

[tool.poetry.extras]
geo = ["geopandas", "osmnx"]
api = ["fastapi"]
dqa = ["geopandas", "seaborn"]

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pre-commit = "^2.19.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
